Added students , profile , settings page
